--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ archives_base_name=PetsInABag
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.77.0+1.19.2
 trinkets_version=3.4.1
+# owo_version=0.9.3+1.19
